- Fix read more button icon vertical alignment issue. - Make the post comment button text bold.

--- a/assets/css/src/comments.scss
+++ b/assets/css/src/comments.scss
@@ -147,7 +147,8 @@ li.comment.bypostauthor {
   background: $primary;
   color: $light-1;
   border: 0;
-  border-radius: 3px;
+  font-weight: bold;
+  @include border-radius(3px)
 }
 
 #commentform #submit:hover {
