--- a/assets/css/src/misc.scss
+++ b/assets/css/src/misc.scss
@@ -10,7 +10,7 @@
 
 #archive-info .author-avatar img{@include border-radius(50%)}
 
-span.icon{position: relative;top:.2em}
+.nav span.icon{position: relative;top:.25em}
 
 
 #nav-social-media a{color:#FFF!important;}
